fixed alignment bug

--- a/Resources/Styles/Dark/DarkMode.css
+++ b/Resources/Styles/Dark/DarkMode.css
@@ -1,6 +1,10 @@
 .Background {
-    background-color: #4a4a4a;
+    background-color: #111;
     padding-top: 70px;
-    color: #858585;
+    color: white;
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
 }
 
