--- a/Resources/Styles/Hero.css
+++ b/Resources/Styles/Hero.css
@@ -1,4 +1,6 @@
 .Hero {
+    margin: 0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
